2006-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Thread.java:
	(getState()): New method.
	* java/lang/management/ClassLoadingMXBean.java:
	Corrected class documentation.
	* java/lang/management/ManagementFactory.java:
	Added new temporary marked stub to get thread bean.
	* java/lang/management/OperatingSystemMXBean.java:
	Corrected class documentation.
	* java/lang/management/RuntimeMXBean.java:
	Corrected class documentation.
	* java/lang/management/ThreadInfo.java,
	* java/lang/management/ThreadMXBean.java:
	New classes.
	* vm/reference/java/lang/VMThread.java:
	(getState()): New method.
	* vm/reference/java/lang/management/VMThreadInfo.java:
	New VM class.

2006-06-26  Tania Bento  <tbento@redhat.com>

	* java/awt/List.java
	(List): A list should have at least 4 visible rows.	
	(replaceItem): Should throw an ArrayIndexOutOfBoundsException,
	not an IllegalArgumentException.
	(makeVisible): Should not throw an IllegalArgumentException if
	the specified index is out of range.

2006-06-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(getNextMatch): Reimplemented to perform a circular search for the 
	matching item.

2006-06-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(init): Set default value for visibleRowCount to 8,
	(setVisibleRowCount): Fire PropertyChangeEvent when value changes.

2006-06-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java
	(valueIsAdjusting): Removed,
	(init): Removed initialization of valueIsAdjusting field,
	(getValueIsAdjusting): Fetch value from selection model,
	(setValueIsAdjusting): Store value in selection model.

2006-06-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(installKeyboardActions): Rewritten to fit with the
	ActionMap/InputMap architecture.
	(uninstallKeyboardActions): Implemented.
	(ListAction): Made private. Added TODO for splitting
	up this bulk Action.