@@ -1,3 +1,8 @@
+2006-06-27  Mark Wielaard  <mark@klomp.org>
+
+	* javax/swing/JComponent.java
+	(firePropertyChange(String,char,char)): New override method.
+
 2006-06-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/Thread.java:
